[package]
name = "ubiquitousvariantidentifier"
version = "0.1.0"
authors = ["Felix Mölder <felix.moelder@uk-essen.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.80"
rust-htslib = "0.46"